--- a/curiosidades.html
+++ b/curiosidades.html
@@ -82,7 +82,7 @@
 
   <div 
       class="text-center my-4">
-        <a href="pagin1.html" class="btn btn-success btn-lg">Volver a la página principal</a>
+        <a href="index.html" class="btn btn-success btn-lg">Volver a la página principal</a>
       </div>
 
 </div>
@@ -94,4 +94,5 @@
   <p>&copy; 2025 Curiosidades de Ottawa | contacto@ottawadivertida.com</p>
 </footer>
 </body>
+
 </html>
