--- a/curiosidades.html
+++ b/curiosidades.html
@@ -82,8 +82,12 @@
 
   <div 
       class="text-center my-4">
-        <a href="index.html" class="btn btn-success btn-lg">Volver a la página principal</a>
+        <a href="https://tuusuario.github.io/tu-repo/" class="btn btn-success btn-lg">
+  Volver a la página principal
+</a>
       </div>
+  
+
 
 </div>
 
@@ -96,3 +100,4 @@
 </body>
 
 </html>
+
