--- a/curiosidades.html
+++ b/curiosidades.html
@@ -93,11 +93,12 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+<script src="index.html"></script>
 <footer>
   <p>&copy; 2025 Curiosidades de Ottawa | contacto@ottawadivertida.com</p>
 </footer>
 </body>
 
 </html>
+
 
