--- a/curiosidades.html
+++ b/curiosidades.html
@@ -79,26 +79,20 @@
       </div>
     </div>
   </div>
-
-  <div 
-      class="text-center my-4">
-        <a href="https://tuusuario.github.io/tu-repo/" class="btn btn-success btn-lg">
+  <a href="index.html" class="btn btn-success btn-lg">
   Volver a la página principal
 </a>
-      </div>
-  
-
-
 </div>
 
 
 
-<script src="index.html"></script>
+
 <footer>
   <p>&copy; 2025 Curiosidades de Ottawa | contacto@ottawadivertida.com</p>
 </footer>
 </body>
 
 </html>
+
 
 
